# catchx

./: .gitignore  DAG_csv_to_iceberg.py  DAG_stream_to_binarytable.py  Dockerfile  EXTRAS.md  HiveForDelta.md  README.md  TODO.md  TransactionIngestion.xml  app.py  apprunner.py  banking.json  catchx.json  chart.py  cluster_configure_and_attach.sh  codeviewers.py  common.py  connect_and_configure.sh  docker-compose.yaml  elements.py  functions.py  gui.py  happybaser.py  helpers.py  hive.hql  iceberger.py  ingestion.py  main.py  map.py  maprdb_python_client-1.1.7-py3-none-any.whl  mock.py  monitoring.py  mysqldb.py  nohup.out  page.py  pyproject.toml  reconfigure.sh  requirements.txt  restrunner.py  runners.py  (+8 more)
.devcontainer/: devcontainer.json
DAGs/: air_quality_DAG.py  csv_to_iceberg_DAG.py
helm-package/: catchx-0.0.3.tgz
templates/: TransactionFlow.xml.j2
